feat: update user api
