# api/user/v1/user.pb.validate.go
@@ -995,39 +995,74 @@ func (m *UpdateUserRequest_Data) validate(all bool) error {
 
 	var errors []error
 
-	if err := m._validateEmail(m.GetEmail()); err != nil {
-		err = UpdateUserRequest_DataValidationError{
-			field:  "Email",
-			reason: "value must be a valid email address",
-			cause:  err,
+	if m.GetBio() != "" {
+
+		if utf8.RuneCountInString(m.GetBio()) > 256 {
+			err := UpdateUserRequest_DataValidationError{
+				field:  "Bio",
+				reason: "value length must be at most 256 runes",
+			}
+			if !all {
+				return err
+			}
+			errors = append(errors, err)
 		}
-		if !all {
-			return err
-		}
-		errors = append(errors, err)
+
 	}
 
-	// no validation rules for Bio
+	if m.GetImage() != "" {
 
-	if uri, err := url.Parse(m.GetImage()); err != nil {
-		err = UpdateUserRequest_DataValidationError{
-			field:  "Image",
-			reason: "value must be a valid URI",
-			cause:  err,
+		if uri, err := url.Parse(m.GetImage()); err != nil {
+			err = UpdateUserRequest_DataValidationError{
+				field:  "Image",
+				reason: "value must be a valid URI",
+				cause:  err,
+			}
+			if !all {
+				return err
+			}
+			errors = append(errors, err)
+		} else if !uri.IsAbs() {
+			err := UpdateUserRequest_DataValidationError{
+				field:  "Image",
+				reason: "value must be absolute",
+			}
+			if !all {
+				return err
+			}
+			errors = append(errors, err)
 		}
-		if !all {
-			return err
+
+	}
+
+	if m.GetUsername() != "" {
+
+		if l := utf8.RuneCountInString(m.GetUsername()); l < 3 || l > 32 {
+			err := UpdateUserRequest_DataValidationError{
+				field:  "Username",
+				reason: "value length must be between 3 and 32 runes, inclusive",
+			}
+			if !all {
+				return err
+			}
+			errors = append(errors, err)
 		}
-		errors = append(errors, err)
-	} else if !uri.IsAbs() {
-		err := UpdateUserRequest_DataValidationError{
-			field:  "Image",
-			reason: "value must be absolute",
+
+	}
+
+	if m.GetPassword() != "" {
+
+		if l := utf8.RuneCountInString(m.GetPassword()); l < 6 || l > 32 {
+			err := UpdateUserRequest_DataValidationError{
+				field:  "Password",
+				reason: "value length must be between 6 and 32 runes, inclusive",
+			}
+			if !all {
+				return err
+			}
+			errors = append(errors, err)
 		}
-		if !all {
-			return err
-		}
-		errors = append(errors, err)
+
 	}
 
 	if len(errors) > 0 {
@@ -1035,56 +1070,6 @@ func (m *UpdateUserRequest_Data) validate(all bool) error {
 	}
 
 	return nil
-}
-
-func (m *UpdateUserRequest_Data) _validateHostname(host string) error {
-	s := strings.ToLower(strings.TrimSuffix(host, "."))
-
-	if len(host) > 253 {
-		return errors.New("hostname cannot exceed 253 characters")
-	}
-
-	for _, part := range strings.Split(s, ".") {
-		if l := len(part); l == 0 || l > 63 {
-			return errors.New("hostname part must be non-empty and cannot exceed 63 characters")
-		}
-
-		if part[0] == '-' {
-			return errors.New("hostname parts cannot begin with hyphens")
-		}
-
-		if part[len(part)-1] == '-' {
-			return errors.New("hostname parts cannot end with hyphens")
-		}
-
-		for _, r := range part {
-			if (r < 'a' || r > 'z') && (r < '0' || r > '9') && r != '-' {
-				return fmt.Errorf("hostname parts can only contain alphanumeric characters or hyphens, got %q", string(r))
-			}
-		}
-	}
-
-	return nil
-}
-
-func (m *UpdateUserRequest_Data) _validateEmail(addr string) error {
-	a, err := mail.ParseAddress(addr)
-	if err != nil {
-		return err
-	}
-	addr = a.Address
-
-	if len(addr) > 254 {
-		return errors.New("email addresses cannot exceed 254 characters")
-	}
-
-	parts := strings.SplitN(addr, "@", 2)
-
-	if len(parts[0]) > 64 {
-		return errors.New("email address local phrase cannot exceed 64 characters")
-	}
-
-	return m._validateHostname(parts[1])
 }
 
 // UpdateUserRequest_DataMultiError is an error wrapping multiple validation
